--- a/SecondKatanaTry/bin/SecondKatanaTry.dll.config
+++ b/SecondKatanaTry/bin/SecondKatanaTry.dll.config
@@ -9,8 +9,11 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
+      
     </system.web>
-
+  <appSettings>
+    <add key="owin:AutomaticAppStartup" value="true" />
+  </appSettings>
 <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
